# projet_paa_yalta_chess

./: .gitignore  CMakeLists.txt  README.md  yalta_config.ini
MVC/: CMakeLists.txt  main.cpp  test_sdl.cpp
MVC/Controller/include/: AiState.hpp  BoardController.hpp  DebugModeState.hpp  MainController.hpp  PlayState.hpp  PromotionState.hpp  State.hpp  VictoryState.hpp
MVC/Controller/src/: BoardController.cpp  MainController.cpp
MVC/Model/include/: Jeu.hpp  Joueur.hpp  Piece.hpp  Plateau.hpp
MVC/Model/src/: Jeu.cpp  Joueur.cpp  Piece.cpp  Plateau.cpp
MVC/View/include/: DrawBoard.hpp  FallingPiece.hpp  MakeBoard.hpp  Menu.hpp
MVC/View/src/: DrawBoard.cpp  MakeBoard.cpp  Menu.cpp
include/: Case.hpp  GameController.hpp  GameView.hpp  InputStrategy.hpp  MinMaxAI.hpp  MovementStrategy.hpp  Piece.hpp  Plateau.hpp  PlateauObserver.hpp  PlateauState.hpp  RuntimeConfig.hpp  StartupMenu.hpp
src/: main.cpp
src/ai/: MinMaxAI.cpp
src/controller/: GameController.cpp  InputStrategy.cpp  RuntimeConfig.cpp
src/model/: Case.cpp  MovementStrategy.cpp  Piece.cpp  Plateau.cpp  PlateauCaptures.cpp  PlateauGeometry.cpp  PlateauMoves.cpp  PlateauSpecialRules.cpp  PlateauState.cpp
src/view/: GameView.cpp  StartupMenu.cpp
tests/: AIProbe.cpp  MoveProbe.cpp
